grammar/MONGOParser.java
// Generated from /home/synerzip/source-code/pankaj-repos/antlr_io/grammar/MONGOParser.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MONGOParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SPACE=1, FUNCTION=2, DB=3, FIND=4, INSERT=5, INSERTONE=6, INSERTMANY=7, 
		UPDATE=8, UPDATEMANY=9, UPDATEONE=10, DELETEONE=11, REPLACEONE=12, DELETEMANY=13, 
		AGGREGATE=14, BULKWRITE=15, FN_ARG_VAL=16, ADMINCOMMAND=17, CLONECOLLECTION=18, 
		CLONEDATABASE=19, COPYDATABASE=20, CREATEVIEW=21, CURRENTOP=22, DROPDATABASE=23, 
		EVAL=24, ALPHA=25, TEXT=26, UNDERSCORE=27, DOT=28, OPEN_ROUND_BRACKET=29, 
		CLOSE_ROUND_BRACKET=30, OPEN_SQUARE_BRACKET=31, CLOSE_SQUARE_BRACKET=32, 
		OPEN_CURLY_BRACKET=33, CLOSE_CURLY_BRACKET=34, ISTO_CHAR=35, COMMAR_CHAR=36, 
		EQUAL_TO=37, BOOLEAN=38, TRUE=39, FALSE=40, NULL=41, STRING=42, NUMBER=43, 
		KEYWORDS=44, DATE=45, DATETYPE=46, CustomDate=47, MILLISEC=48, YYYY=49, 
		MM=50, DD=51, HH=52, MIN=53, SEC=54;
	public static final int
		RULE_mongo_statements = 0, RULE_mongo_statement = 1, RULE_cursor_methods = 2, 
		RULE_aggregate_statement = 3, RULE_intialQuerry = 4, RULE_document = 5, 
		RULE_document_array = 6, RULE_database_methods = 7, RULE_collection_methods = 8, 
		RULE_methodDeclaration = 9, RULE_formalParameters = 10, RULE_formalParameterList = 11, 
		RULE_operations_input_method_input = 12, RULE_operations_input_method = 13, 
		RULE_params_string_or_doc = 14, RULE_params_string = 15, RULE_params_string_string_doc = 16, 
		RULE_params_strings = 17, RULE_params_strings_array_doc = 18, RULE_params_boolean_or_doc = 19, 
		RULE_params_no_arg = 20, RULE_params_jsfunction_args = 21, RULE_parameter = 22, 
		RULE_other_methods = 23, RULE_db_string_or_doc_input_method = 24, RULE_db_string_doc_input_method = 25, 
		RULE_db_string_input_method = 26, RULE_db_strings_input_method = 27, RULE_db_strings_array_doc_input_method = 28, 
		RULE_db_boolean_or_doc_input_method = 29, RULE_db_no_arg_input_method = 30, 
		RULE_db_javascriptfn_args_input_method = 31, RULE_single_doc_input_method = 32, 
		RULE_multiple_doc_input_method = 33, RULE_single_or_multiple_doc_input_method = 34, 
		RULE_query_statements = 35, RULE_json_input = 36, RULE_db_name = 37, RULE_collection_name = 38, 
		RULE_json = 39, RULE_object = 40, RULE_pair = 41, RULE_array = 42, RULE_value = 43;
	public static final String[] ruleNames = {
		"mongo_statements", "mongo_statement", "cursor_methods", "aggregate_statement", 
		"intialQuerry", "document", "document_array", "database_methods", "collection_methods", 
		"methodDeclaration", "formalParameters", "formalParameterList", "operations_input_method_input", 
		"operations_input_method", "params_string_or_doc", "params_string", "params_string_string_doc", 
		"params_strings", "params_strings_array_doc", "params_boolean_or_doc", 
		"params_no_arg", "params_jsfunction_args", "parameter", "other_methods", 
		"db_string_or_doc_input_method", "db_string_doc_input_method", "db_string_input_method", 
		"db_strings_input_method", "db_strings_array_doc_input_method", "db_boolean_or_doc_input_method", 
		"db_no_arg_input_method", "db_javascriptfn_args_input_method", "single_doc_input_method", 
		"multiple_doc_input_method", "single_or_multiple_doc_input_method", "query_statements", 
		"json_input", "db_name", "collection_name", "json", "object", "pair", 
		"array", "value"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, "'find'", "'insert'", "'insertOne'", "'insertMany'", 
		"'update'", "'updateMany'", "'updateOne'", "'deleteOne'", "'replaceOne'", 
		"'deleteMany'", "'aggregate'", "'bulkWrite'", null, "'adminCommand'", 
		"'cloneCollection'", "'cloneDatabase'", "'copyDatabase'", "'createView'", 
		"'currentOp'", "'dropDatabase'", "'eval'", null, null, "'_'", "'.'", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "':'", "','", "'='", null, "'true'", 
		"'false'", "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SPACE", "FUNCTION", "DB", "FIND", "INSERT", "INSERTONE", "INSERTMANY", 
		"UPDATE", "UPDATEMANY", "UPDATEONE", "DELETEONE", "REPLACEONE", "DELETEMANY", 
		"AGGREGATE", "BULKWRITE", "FN_ARG_VAL", "ADMINCOMMAND", "CLONECOLLECTION", 
		"CLONEDATABASE", "COPYDATABASE", "CREATEVIEW", "CURRENTOP", "DROPDATABASE", 
		"EVAL", "ALPHA", "TEXT", "UNDERSCORE", "DOT", "OPEN_ROUND_BRACKET", "CLOSE_ROUND_BRACKET", 
		"OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", "OPEN_CURLY_BRACKET", "CLOSE_CURLY_BRACKET", 
		"ISTO_CHAR", "COMMAR_CHAR", "EQUAL_TO", "BOOLEAN", "TRUE", "FALSE", "NULL", 
		"STRING", "NUMBER", "KEYWORDS", "DATE", "DATETYPE", "CustomDate", "MILLISEC", 
		"YYYY", "MM", "DD", "HH", "MIN", "SEC"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MONGOParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MONGOParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Mongo_statementsContext extends ParserRuleContext {
		public Mongo_statementContext mongo_statement() {
			return getRuleContext(Mongo_statementContext.class,0);
		}
		public Mongo_statementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mongo_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).enterMongo_statements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).exitMongo_statements(this);
		}
	}

	public final Mongo_statementsContext mongo_statements() throws RecognitionException {
		Mongo_statementsContext _localctx = new Mongo_statementsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mongo_statements);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			mongo_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mongo_statementContext extends ParserRuleContext {
		public IntialQuerryContext intialQuerry() {
			return getRuleContext(IntialQuerryContext.class,0);
		}
		public List<Collection_methodsContext> collection_methods() {
			return getRuleContexts(Collection_methodsContext.class);
		}
		public Collection_methodsContext collection_methods(int i) {
			return getRuleContext(Collection_methodsContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(MONGOParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(MONGOParser.DOT, i);
		}
		public Db_nameContext db_name() {
			return getRuleContext(Db_nameContext.class,0);
		}
		public Database_methodsContext database_methods() {
			return getRuleContext(Database_methodsContext.class,0);
		}
		public Mongo_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mongo_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).enterMongo_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).exitMongo_statement(this);
		}
	}

	public final Mongo_statementContext mongo_statement() throws RecognitionException {
		Mongo_statementContext _localctx = new Mongo_statementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mongo_statement);
		int _la;
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				intialQuerry();
				setState(91);
				collection_methods();
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DOT) {
					{
					{
					setState(92);
					match(DOT);
					setState(93);
					collection_methods();
					}
					}
					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				db_name();
				setState(100);
				match(DOT);
				setState(101);
				database_methods();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cursor_methodsContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(MONGOParser.TEXT, 0); }
		public TerminalNode OPEN_ROUND_BRACKET() { return getToken(MONGOParser.OPEN_ROUND_BRACKET, 0); }
		public TerminalNode CLOSE_ROUND_BRACKET() { return getToken(MONGOParser.CLOSE_ROUND_BRACKET, 0); }
		public Cursor_methodsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cursor_methods; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).enterCursor_methods(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).exitCursor_methods(this);
		}
	}

	public final Cursor_methodsContext cursor_methods() throws RecognitionException {
		Cursor_methodsContext _localctx = new Cursor_methodsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cursor_methods);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(TEXT);
			setState(106);
			match(OPEN_ROUND_BRACKET);
			setState(107);
			match(CLOSE_ROUND_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aggregate_statementContext extends ParserRuleContext {
		public TerminalNode AGGREGATE() { return getToken(MONGOParser.AGGREGATE, 0); }
		public Aggregate_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggregate_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).enterAggregate_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).exitAggregate_statement(this);
		}
	}

	public final Aggregate_statementContext aggregate_statement() throws RecognitionException {
		Aggregate_statementContext _localctx = new Aggregate_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_aggregate_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(AGGREGATE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntialQuerryContext extends ParserRuleContext {
		public Db_nameContext db_name() {
			return getRuleContext(Db_nameContext.class,0);
		}
		public List<TerminalNode> DOT() { return getTokens(MONGOParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(MONGOParser.DOT, i);
		}
		public Collection_nameContext collection_name() {
			return getRuleContext(Collection_nameContext.class,0);
		}
		public TerminalNode OPEN_ROUND_BRACKET() { return getToken(MONGOParser.OPEN_ROUND_BRACKET, 0); }
		public TerminalNode STRING() { return getToken(MONGOParser.STRING, 0); }
		public TerminalNode CLOSE_ROUND_BRACKET() { return getToken(MONGOParser.CLOSE_ROUND_BRACKET, 0); }
		public IntialQuerryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intialQuerry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).enterIntialQuerry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).exitIntialQuerry(this);
		}
	}

	public final IntialQuerryContext intialQuerry() throws RecognitionException {
		IntialQuerryContext _localctx = new IntialQuerryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_intialQuerry);
		int _la;
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				db_name();
				setState(112);
				match(DOT);
				setState(113);
				collection_name();
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPEN_ROUND_BRACKET) {
					{
					setState(114);
					match(OPEN_ROUND_BRACKET);
					setState(115);
					match(STRING);
					setState(116);
					match(CLOSE_ROUND_BRACKET);
					}
				}

				setState(119);
				match(DOT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				db_name();
				setState(122);
				match(DOT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocumentContext extends ParserRuleContext {
		public TerminalNode OPEN_ROUND_BRACKET() { return getToken(MONGOParser.OPEN_ROUND_BRACKET, 0); }
		public Json_inputContext json_input() {
			return getRuleContext(Json_inputContext.class,0);
		}
		public TerminalNode CLOSE_ROUND_BRACKET() { return getToken(MONGOParser.CLOSE_ROUND_BRACKET, 0); }
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).exitDocument(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_document);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(OPEN_ROUND_BRACKET);
			setState(127);
			json_input();
			setState(128);
			match(CLOSE_ROUND_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Document_arrayContext extends ParserRuleContext {
		public TerminalNode OPEN_ROUND_BRACKET() { return getToken(MONGOParser.OPEN_ROUND_BRACKET, 0); }
		public TerminalNode OPEN_SQUARE_BRACKET() { return getToken(MONGOParser.OPEN_SQUARE_BRACKET, 0); }
		public List<Json_inputContext> json_input() {
			return getRuleContexts(Json_inputContext.class);
		}
		public Json_inputContext json_input(int i) {
			return getRuleContext(Json_inputContext.class,i);
		}
		public TerminalNode CLOSE_SQUARE_BRACKET() { return getToken(MONGOParser.CLOSE_SQUARE_BRACKET, 0); }
		public TerminalNode CLOSE_ROUND_BRACKET() { return getToken(MONGOParser.CLOSE_ROUND_BRACKET, 0); }
		public List<TerminalNode> COMMAR_CHAR() { return getTokens(MONGOParser.COMMAR_CHAR); }
		public TerminalNode COMMAR_CHAR(int i) {
			return getToken(MONGOParser.COMMAR_CHAR, i);
		}
		public List<TerminalNode> OPEN_CURLY_BRACKET() { return getTokens(MONGOParser.OPEN_CURLY_BRACKET); }
		public TerminalNode OPEN_CURLY_BRACKET(int i) {
			return getToken(MONGOParser.OPEN_CURLY_BRACKET, i);
		}
		public List<TerminalNode> CLOSE_CURLY_BRACKET() { return getTokens(MONGOParser.CLOSE_CURLY_BRACKET); }
		public TerminalNode CLOSE_CURLY_BRACKET(int i) {
			return getToken(MONGOParser.CLOSE_CURLY_BRACKET, i);
		}
		public Document_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).enterDocument_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).exitDocument_array(this);
		}
	}

	public final Document_arrayContext document_array() throws RecognitionException {
		Document_arrayContext _localctx = new Document_arrayContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_document_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(OPEN_ROUND_BRACKET);
			setState(131);
			match(OPEN_SQUARE_BRACKET);
			setState(132);
			json_input();
			setState(133);
			match(CLOSE_SQUARE_BRACKET);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMAR_CHAR) {
				{
				{
				setState(134);
				match(COMMAR_CHAR);
				setState(135);
				match(OPEN_CURLY_BRACKET);
				setState(136);
				json_input();
				setState(137);
				match(CLOSE_CURLY_BRACKET);
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			match(CLOSE_ROUND_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Database_methodsContext extends ParserRuleContext {
		public Db_string_or_doc_input_methodContext db_string_or_doc_input_method() {
			return getRuleContext(Db_string_or_doc_input_methodContext.class,0);
		}
		public Params_string_or_docContext params_string_or_doc() {
			return getRuleContext(Params_string_or_docContext.class,0);
		}
		public Db_string_doc_input_methodContext db_string_doc_input_method() {
			return getRuleContext(Db_string_doc_input_methodContext.class,0);
		}
		public Params_string_string_docContext params_string_string_doc() {
			return getRuleContext(Params_string_string_docContext.class,0);
		}
		public Db_string_input_methodContext db_string_input_method() {
			return getRuleContext(Db_string_input_methodContext.class,0);
		}
		public Params_stringContext params_string() {
			return getRuleContext(Params_stringContext.class,0);
		}
		public Db_strings_input_methodContext db_strings_input_method() {
			return getRuleContext(Db_strings_input_methodContext.class,0);
		}
		public Params_stringsContext params_strings() {
			return getRuleContext(Params_stringsContext.class,0);
		}
		public Db_strings_array_doc_input_methodContext db_strings_array_doc_input_method() {
			return getRuleContext(Db_strings_array_doc_input_methodContext.class,0);
		}
		public Params_strings_array_docContext params_strings_array_doc() {
			return getRuleContext(Params_strings_array_docContext.class,0);
		}
		public Db_boolean_or_doc_input_methodContext db_boolean_or_doc_input_method() {
			return getRuleContext(Db_boolean_or_doc_input_methodContext.class,0);
		}
		public Params_boolean_or_docContext params_boolean_or_doc() {
			return getRuleContext(Params_boolean_or_docContext.class,0);
		}
		public Db_no_arg_input_methodContext db_no_arg_input_method() {
			return getRuleContext(Db_no_arg_input_methodContext.class,0);
		}
		public Params_no_argContext params_no_arg() {
			return getRuleContext(Params_no_argContext.class,0);
		}
		public Db_javascriptfn_args_input_methodContext db_javascriptfn_args_input_method() {
			return getRuleContext(Db_javascriptfn_args_input_methodContext.class,0);
		}
		public Params_jsfunction_argsContext params_jsfunction_args() {
			return getRuleContext(Params_jsfunction_argsContext.class,0);
		}
		public Database_methodsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_database_methods; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).enterDatabase_methods(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MONGOParserListener ) ((MONGOParserListener)listener).exitDatabase_methods(this);
		}
	}

	public final Database_methodsContext database_methods() throws RecognitionException {
		Database_methodsContext _localctx = new Database_methodsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_database_methods);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ADMINCOMMAND:
				{
				setState(146);
				db_string_or_doc_input_method();
				setState(147);
				params_string_or_doc();
				}
				break;
			case CLONECOLLECTION:
				{
				setState(149);
				db_string_doc_input_method();
				setState(150);
				params_string_string_doc();
				}
				break;
			case CLONEDATABASE:
				{
				setState(152);
				db_string_input_method();
				setState(153);
				params_string();
				}
				break;
			case COPYDATABASE:
				{
				setState(155);
				db_strings_input_method();
				setState(156);
				params_strings();
				}
				break;
			case CREATEVIEW:
				{
				setState(158);
				db_strings_array_doc_input_method();
				setState(159);
				params_strings_array_doc();
				}
				break;
			case CURRENTOP:
				{
				setState(161);
				db_boolean_or_doc_input_method();
				setState(162);
				params_boolean_or_doc();
				}
				break;
			case DROPDATABASE:
				{
				setState(164);
				db_no_arg_input_method();
				setState(165);
				params_no_arg();
				}
				break;
			case EVAL:
				{
				setState(167);
				db_javascriptfn_args_input_method();
				setState(168);
				params_jsfunction_args();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
